<resources>
    <string name="app_name">Tip Time</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="about">About</string>
    <string name="calculate">Calculate</string>
    <string name="custo_of_the_service">Custo of the Service</string>
    <string name="how_was_the_service">How Was The Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="round_up_tip">Round up Tip</string>
    <string name="round_down_tip">Round Down Tip</string>

    <string name="amount">Amount: $</string>
    <string name="how_was_the_service">How Was The Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="okay_10">Okay (10%)</string>

</resources>