<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_calculate">

    <fragment
        android:id="@+id/navigation_bout"
        android:name="com.example.tiptime.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" >
        <action
            android:id="@+id/action_navigation_bout_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calculate"
        android:name="com.example.tiptime.ui.calculate.CalculateFragment"
        android:label="@string/calculate"
        tools:layout="@layout/fragment_calculate" >
        <action
            android:id="@+id/action_navigation_calculate_to_navigation_bout"
            app:destination="@id/navigation_bout" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.tiptime.ui.tip.TipFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_tip" />
</navigation>