<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculate.CalculateFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/cost_the_service"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:fontFamily="@font/montserrat_alternates_light"
            android:gravity="center"
            android:hint="@string/custo_of_the_service"
            android:textSize="18dp"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.311">

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="270dp"
            android:layout_height="119dp"
            android:layout_marginTop="28dp"
            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/amazing_20"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/good_15"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/okay_10"
                android:textSize="20sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/how_the_service"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/how_was_the_service"
        android:textSize="15dp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>